--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -8,9 +8,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 80vh;
   margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 50px;
+  margin-bottom: 20px;
+  padding: 90px;
+  padding-bottom: 110px;
   border-radius: 5px;
   background-color: #478fc9;
   box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
@@ -27,7 +29,7 @@
   padding: 10px;
 }
 
-.firstname, .lastname, .username, .password  {
+.firstname, .lastname, .username, .password, .role  {
   border-radius: 2px;
   border-style: none;
   background-color: white;
