--- a/client/src/components/UserPrivateProfile.css
+++ b/client/src/components/UserPrivateProfile.css
@@ -74,7 +74,7 @@
   display: flex;
   flex-direction: column;
   background-color: #e68627;
-  margin-right: 100px;
+  /* margin-right: 100px; */
   justify-content: flex-start;
   padding: 20px;
   font-weight: bold;
@@ -85,6 +85,7 @@
 .user_details {
   padding-top: 10px
 }
+
 
 
 
