--- a/client/src/components/AdminForms.css
+++ b/client/src/components/AdminForms.css
@@ -1,10 +1,49 @@
-.admin_page_container {
+.add_task_wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.add_task_container {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  font-weight: bolder;
+  justify-content: center;
+  margin-left: 15px;
+  background-color: #548eba;; 
+  color: white;
+  padding: 50px 5px 50px 5px;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+
+.add_task_form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color:#e68627;
-  margin: 30px;
-  border-radius: 5px;
-  color: white;
 }
+
+.submit_task_btn {
+  border-radius: 2px;
+  border-style: none;
+  background-color: #e68627;
+  color: white;
+  font-weight: bold;
+  margin-top: 20px;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+
+.submit_task_btn:active {
+  background-color: white;
+  color:#e68627;
+}
+
+.submit_task_btn:hover {
+  background-color: #a3a19e;
+  color: white;
+  cursor: pointer;
+}
+
