--- a/client/src/components/Login.css
+++ b/client/src/components/Login.css
@@ -7,13 +7,54 @@
 .login_form_container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 50px;
-  border-radius: 5px;
-  background-color: #478fc9;
+  background-color: #548eba;
+  border-radius: 4px;
   box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+
+.login_form {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-bottom: 22px;
+  padding: 50px;
+  padding-bottom: 6px;
+}
+
+.login_btn {
+  border-radius: 2px;
+  border-style: none;
+  background-color: #e68627;
+  color: white;
+  font-weight: bold;
+  margin-top: 20px;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+
+.login_btn:hover {
+  background-color: white;
+  color:#e68627;
+  cursor: pointer;
+} 
+
+.login_btn:active {
+  background-color: gray;
+  color:#e68627;
+
+}
+
+.username, .password {
+  border-radius: 2px;
+  border-style: none;
+  margin: 5px;
+  padding: 4px;
+  width: 40vw;
+  color: #e68627;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+::placeholder {
+  color: #e68627;
 }
 
 .login_form {
@@ -43,9 +84,6 @@ padding: 10px;
   background-color: white;
   color:#e68627;
   cursor: pointer;
-}
-
-
-
+}  
 
 
