--- a/client/src/components/UserPrivateProfile.css
+++ b/client/src/components/UserPrivateProfile.css
@@ -1,90 +1,146 @@
-.user_heading {
+.user_page {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
 }
 
-.user_page_container {
+.user_greeting {
+  font-weight: 900;
+  color: #e68627;
+  text-shadow: 0px 2px 2px rgba(81,67,21,0.8);
+}
+
+.user_location_wrapper {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  margin-left: 50px;
+  
+}
+
+.user_info_wrapper {
+  display: flex;
+  flex-direction: column;
+  margin-left: 88px;
+  width: 20vw;
+  padding: 10px;
+  border-radius: 8px;
+  background-color: #548eba;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+
+.current_user_information {
+  display: flex;
+  flex-direction: column;
 }
 
 .update_user_container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background-color: #e68627;
-  color: white;
+  background-color: brown;
+  padding: 10px 60px 10px 60px;
+  margin: 40px;
+  border-radius: 8px;
+  background-color: #548eba;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+}
+
+p {
   font-weight: bold;
-  padding: 20px;
-  border-radius: 3px;
-  margin: 10px;
-  width: 40vw;
+  color: white;
+}
+.update_title {
+  font-size: 18px;
+  font-weight: bold;
 }
 
 .update_user_form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  padding: 5px;
+ 
 }
 
 .update_user_location {
-  font-weight: bold;
-  padding: 8px;
-  width: 250px;
+  padding: 10px;
+  width: 20vw;
 }
 
 .submit_user_update {
   border-radius: 2px;
   border-style: none;
-  background-color: white;
+  background-color: #e68627;
+  color: white;
   font-weight: bold;
-  margin-top: 10px;
-  width: 29vw;
-  color: #e68627;
+  margin-top: 20px;
+  width: 15vw;
   padding: 8px;
   box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
 }
+
 .submit_user_update:hover {
+  background-color: white;
   background-color: #a3a19e;
-  color: white;
+  cursor: pointer;
 }
 
-.user_profile_container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
- 
+.submit_user_update:active {
+  background-color: white;
+  color:#e68627;
+}
+
+img {
+border-radius: 50%
+}
+
+.logout {
+  border-radius: 2px;
+  border-style: none;
+  background-color: #e68627;
+  color: white;
+  font-weight: bold;
+  margin-top: 20px;
+  width: 15vw;
+  padding: 8px;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+
+}
+
+span {
+  font-size: 25px;
+  font-weight: 900;
+  color: white;
+  text-shadow: 0px 2px 2px rgba(81,67,21,0.8);
+}
+
+.info {
+  font-size: 15px
 }
 
 .user_image {
-  background-color: aliceblue;
-  height: 40px;
-  width: 40px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.user_info_container {
   display: flex;
   flex-direction: column;
-  background-color: #e68627;
-  /* margin-right: 100px; */
-  justify-content: flex-start;
-  padding: 20px;
-  font-weight: bold;
-  color: white;
-  border-radius: 30px;
+  background-color: gray;
+  align-items: center;
+  justify-content: center;
+  height: 60px;  
+  width: 60px;
+  border-radius: 50%;
+  margin-bottom: 30px
 }
 
-.user_details {
-  padding-top: 10px
+h4 {
+  color: black;
+  font-weight: bold;
 }
+
+
+
+
 
 
 
