--- a/client/src/components/UserPublicProfile.css
+++ b/client/src/components/UserPublicProfile.css
@@ -1,5 +1,5 @@
 .public_user_info_container {
-  background-color: #e68627;
+  background-color: #548eba;;
   margin: 50px;
   display: flex;
   flex-direction: column;
@@ -8,6 +8,7 @@
   width: 50vw;
   border-radius: 5px;
   color: white;
+  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
 }
 
 .public_user_info_header {
@@ -26,4 +27,14 @@
   align-items: center;
   margin-right: 20px;
   margin-left: -10px;
+  margin-bottom: 10px
+}
+
+.public_info {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+h3 {
+  text-shadow: 0px 2px 2px rgba(81,67,21,0.8);
 }
