--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -17,7 +17,7 @@
   margin-bottom: 20px;
 }
 
-.login_register:hover{
+.login_register:hover {
   background-color: white;
   background-color: #a3a19e;
   cursor: pointer;
@@ -25,19 +25,15 @@
 
 .login_register:active {
   background-color: white;
-  color:#e68627;
+  color: #e68627;
 }
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Hind+Siliguri:wght@300&family=Montserrat:wght@600&family=Oswald:wght@300&family=Oxygen&family=Sora:wght@800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Hind+Siliguri:wght@300&family=Montserrat:wght@600&family=Oswald:wght@300&family=Oxygen&family=Sora:wght@800&display=swap");
 
 body {
-  background-image: url('/Users/magreda/Codeworks Senior/Solo Project/whoswhere/client/src/assests/sky.jpg');
+  background-image: url("../assests/sky.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: 'Dongle', sans-serif;
-  font-family: 'Hind Siliguri', sans-serif;
+  font-family: "Dongle", sans-serif;
+  font-family: "Hind Siliguri", sans-serif;
   font-weight: 900;
 }
-
-
-
