--- a/client/src/domains/Login/Login.css
+++ b/client/src/domains/Login/Login.css
@@ -1,89 +1,46 @@
-.login_page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.login_form_container {
-  display: flex;
-  flex-direction: column;
-  background-color: #548eba;
-  border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
-}
-
 .login_form {
   display: flex;
   flex-direction: column;
-  margin-top: 10px;
-  margin-bottom: 22px;
-  padding: 50px;
-  padding-bottom: 6px;
+  align-items: center;
+  justify-content: space-evenly;
+  background-color: #CBD2EA;
+  height: 50vh;
+  width: 50vw;
+  border-radius: 4px;
 }
 
 .login_btn {
-  border-radius: 2px;
-  border-style: none;
-  background-color: #e68627;
-  color: white;
-  font-weight: bold;
-  margin-top: 20px;
-  padding: 8px;
-  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 2px 3px 8px;
+  background-color: #C4C4C4;
+  border: 1px solid #FFFFFF;
+  width: 150px;
+  color: #FFFFFF;
+  height: 30px;
 }
 
 .login_btn:hover {
-  background-color: white;
-  color:#e68627;
+  background-color: #FFFFFF;
+  color: #C4C4C4;
+  border: 1px solid #C4C4C4;
   cursor: pointer;
 } 
 
 .login_btn:active {
-  background-color: gray;
-  color:#e68627;
-
+  background-color: #3D3D3F;
+  color:#FFFFFF;
 }
 
 .username, .password {
-  border-radius: 2px;
   border-style: none;
   margin: 5px;
-  padding: 4px;
-  width: 40vw;
-  color: #e68627;
-  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
+  padding: 10px;
+  width: 300px;
+  box-shadow: rgba(0, 0, 0, 0.1) 2px 3px 8px;
 }
 ::placeholder {
-  color: #e68627;
+  color: #C4C4C4;
 }
 
-.login_form {
-  display: flex;
-  flex-direction: column;
-  width: 50vw;
-  height: 40vh;
-  justify-content: space-evenly;
-}
 
-.username, .password {
-padding: 10px;
-}
-
-.login_btn {
-  border-radius: 2px;
-  border-style: none;
-  background-color: #e68627;
-  color: white;
-  font-weight: bold;
-  margin-top: 20px;
-  padding: 8px;
-  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
-}
-
-.login_btn:hover {
-  background-color: white;
-  color:#e68627;
-  cursor: pointer;
-}  
 
 
