--- a/client/src/domains/Navbar/Header.css
+++ b/client/src/domains/Navbar/Header.css
@@ -6,7 +6,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  background: #548eba;
+  background: #CBD2EA;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
   padding: 0 1rem;
   z-index: 5;
