--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle:wght@300&family=Hind+Siliguri:wght@300&family=Oswald:wght@300&family=Oxygen&family=Sora:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Oxygen&family=Sora:wght@800&display=swap');
 
 body {
-font-family: 'Dongle', sans-serif;
-
-/* font-family: 'Hind Siliguri', sans-serif;
-font-family: 'Oswald', sans-serif;
-font-family: 'Oxygen', sans-serif;
-font-family: 'Sora', sans-serif; */
+  font-family: "Oxygen", sans-serif;
+  font-weight: 300;
 }
 
 * {
