--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Oxygen&family=Sora:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;300;500;700&display=swap');
 
-body {
-  font-family: "Oxygen", sans-serif;
+* {
+  font-family: "Sora", sans-serif;
   font-weight: 300;
 }
 
