--- a/client/src/domains/Navbar/NavBar.css
+++ b/client/src/domains/Navbar/NavBar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Oxygen&family=Sora:wght@800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@200;300;700&display=swap');
 
 .mainnav_title {
 font-family: 'Sora', sans-serif;
@@ -29,6 +29,7 @@ text-shadow: 0px 3px 3px #3D3D3F;
 
 .mainnav_title a {
   text-decoration: none;
+  font-weight: 700;
   color: white;
 }
 
