--- a/client/src/pages/Profile.css
+++ b/client/src/pages/Profile.css
@@ -1,13 +1,7 @@
 .profile_page {
   display: flex;
-  flex-direction: row-reverse;
+  justify-content: center;
   align-items: center;
+  width: 100vw;
 }
-.profile_page_container {
-  width: 80vw;
-}
-.admin_forms_container {
-  display: flex;
-  justify-content: flex-start;
-  width: 20vw;
-}
+
