--- a/client/src/domains/Team/UserInfo.css
+++ b/client/src/domains/Team/UserInfo.css
@@ -1,40 +1,48 @@
 .public_user_info_container {
-  background-color: #548eba;;
-  margin: 50px;
-  display: flex;
-  flex-direction: column;
-  padding-left: 20px;
-  padding-top: 10px;
-  width: 50vw;
-  border-radius: 5px;
-  color: white;
-  box-shadow: rgba(0, 0, 0, 0.24) 2px 3px 8px;
-}
-
-.public_user_info_header {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  background-color: #CBD2EA;
+  margin: 50px;
+  width: 40vw;
+  height: 18vh;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.1) 2px 3px 8px;
 }
 
-.public_user_image {
-  background-color: aliceblue;
-  height: 40px;
-  width: 40px;
-  background-color: #bbb;
-  border-radius: 50%;
+.public_user_info {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+}
+.public_user_info h3 {
+  margin-left: 10px;
+  font-weight: 500;
+}
+
+.public_user_info p {
+  margin-bottom: 3px;
+  margin-left: 25px;
+}
+
+.public_user_assets {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-right: 20px;
-  margin-left: -10px;
-  margin-bottom: 10px
+  background-color: #E5E5E5;
+  font-size: 12px;
+  width: 10vw;
+  height: inherit;
+}
+.public_user_assets p {
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  text-align: center;
+  width: 9vw;
+  height: 18vh;
 }
 
-.public_info {
-  font-weight: bold;
-  font-size: 18px;
-}
-
-h3 {
-  text-shadow: 0px 2px 2px rgba(81,67,21,0.8);
+.public_user_assets p:first-of-type {
+  margin-top: 5px;
 }
