--- a/client/src/domains/Profile/UserProfile.css
+++ b/client/src/domains/Profile/UserProfile.css
@@ -9,6 +9,10 @@
   letter-spacing: 1px;
   margin: 0;
 }
+
+.user_greeting_container span {
+  text-decoration: underline;
+}
 .user_info_container {
   display: flex;
   flex-direction: column;
