--- a/client/src/domains/Profile/UserProfile.css
+++ b/client/src/domains/Profile/UserProfile.css
@@ -9,14 +9,19 @@
   letter-spacing: 1px;
   margin: 0;
 }
-
+.user_greeting_container p {
+  text-align: center;
+}
 .user_greeting_container span {
   text-decoration: underline;
+  font-size: 14px;
 }
+
 .user_info_container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   justify-content: end;
   height: 20vh;
 }
