--- a/client/src/domains/Profile/UserProfile.css
+++ b/client/src/domains/Profile/UserProfile.css
@@ -11,10 +11,10 @@
 }
 .user_greeting_container p {
   text-align: center;
+  font-size: 12px;
 }
 .user_greeting_container span {
   text-decoration: underline;
-  font-size: 14px;
 }
 
 .user_info_container {
@@ -26,7 +26,7 @@
   height: 20vh;
 }
 
-.user_info_container h5{
+.user_info_container h4, h5{
   font-weight: 300;
 }
 
