--- a/client/src/domains/Navbar/Header.css
+++ b/client/src/domains/Navbar/Header.css
@@ -10,6 +10,10 @@
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.26);
   padding: 0 1rem;
   z-index: 5;
+  overflow: scroll;
+}
+.main_header::-webkit-scrollbar {
+  display: none;
 }
 
 main {
