--- a/client/src/domains/Profile/CheckinForm.css
+++ b/client/src/domains/Profile/CheckinForm.css
@@ -5,9 +5,8 @@
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100%;
+  height: 100vh;
   position: absolute;
-  margin: 0;
 }
 
 .checkin_wrapper form {
@@ -25,7 +24,7 @@
   border-style: none;
 }
 
-input[type="checkbox"]{
+.checkin_wrapper input[type="checkbox"]{
   width: 30px;
   height: 30px;
 }
