--- a/client/src/domains/Tasks/AdminForms.css
+++ b/client/src/domains/Tasks/AdminForms.css
@@ -17,14 +17,13 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
 }
 
 .add_task {
   border-style: none;
   margin: 5px;
   padding: 10px;
-  width: 300px;
+  max-width: 300px;
   box-shadow: rgba(0, 0, 0, 0.1) 2px 3px 8px;
 }
 
