--- a/client/src/domains/Tasks/Task.css
+++ b/client/src/domains/Tasks/Task.css
@@ -12,8 +12,13 @@
 .task_list {
   display: flex;
   flex-direction: column;
-  width: 40vw;
+  align-items: center;
+  border-radius: 4px;
+  width: 50vw;
   min-height: 60vh;
   background-color: #E5E5E5;
-  padding: 10px
+  padding: 5px;
+}
+.task_list h4{
+  text-align: center;
 }
