--- a/client/src/pages/Tasks.css
+++ b/client/src/pages/Tasks.css
@@ -8,14 +8,17 @@
   display: inline;
   margin-left: 15px;
   font-size: 28px;
-  width: 30vw;
+  width: 50vw;
   padding: 0;
+}
+.task_page_container h5{
+  text-align: center;
+  margin: 0;
 }
 
 .task_list_container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
-  margin-top: 50px;
+  margin-top: 10px;
 }
