--- a/client/src/domains/Tasks/Task.css
+++ b/client/src/domains/Tasks/Task.css
@@ -1,7 +1,13 @@
 .task {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: space-between;
+}
+
+.task_wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   background: #FFFFFF;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   width: 35vw;
@@ -9,16 +15,26 @@
   padding: 20px;
 }
 
+.task p {
+  font-size: 10px;
+}
+
 .task_list {
   display: flex;
   flex-direction: column;
   align-items: center;
   border-radius: 4px;
-  width: 50vw;
+  width: 40vw;
   min-height: 60vh;
   background-color: #E5E5E5;
   padding: 5px;
 }
 .task_list h4{
   text-align: center;
+}
+.task_wrapper:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.5);
+  transition: all .8s ease;
+  width: 36vw;
+  
 }
